# random-walks

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
resources/: chequered.txt  land.txt  land3.txt  landcover_142.txt  landcover_6108_63.4_14.7_94.5_52.0_400.txt  landcover_baboons123_1000.txt  landcover_baboons123_300.txt  landcover_baboons123_500.txt  landcover_baboons123_600.txt  landcover_baboons123_700.txt  landcover_baboons123_800.txt  landcover_baboons123_900.txt  terrain_gpt.txt  terrain_transitions.txt  time_walk_serialized.json
resources/leap_of_the_cat/: The Leap of the Cat.csv
src/: main.cpp  memory_utils.h  utils.h
src/cuda/: brownian_gpu.cu  brownian_gpu.h  correlated_gpu.cu  correlated_gpu.h  cuda_adapter.c  cuda_adapter.h  mixed_gpu.cu  mixed_gpu.h  tensor_convolution.cu
src/math/: Point2D.h  distribution.c  distribution.h  kernel_slicing.c  kernel_slicing.h  math_utils.c  math_utils.h  path_finding.c  path_finding.h  point2D.c
src/matrix/: ScalarMapping.c  ScalarMapping.h  kernels.c  kernels.h  matrix.c  matrix.h  tensor.c  tensor.h
src/misc/: export.h  utils.c  utils.h
src/parsers/: caching.c  caching.h  kernel_terrain_mapping.c  kernel_terrain_mapping.h  move_bank_parser.c  move_bank_parser.h  serialization.c  serialization.h  tensor_map_terrain.c  tensor_map_terrain_time.c  terrain_parser.c  terrain_parser.h  terrain_parsing.c  types.h  walk_json.c  walk_json.h  weather_parser.c  weather_parser.h
src/walk/: b_walk.c  b_walk.h  bs_walk.c  bs_walk.h  c_walk.c  c_walk.h  m_walk.c  m_walk.h  t_walk.c
tests/: CMakeLists.txt  gtest_brownian.cpp  gtest_correlated.cpp  gtest_kernels.cpp  gtest_reachability_kernel.cpp  test_brownian.cpp
